Pre gear ratio change